--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build --verbose --release
+        run: cargo build --all --verbose --release
       - name: Run tests
-        run: cargo test --verbose --release
+        run: cargo test --all --verbose --release
