--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "monkey-rs"
 version = "0.1.0"
 edition = "2021"
-authors = ["Yago Iglesias"]
+authors = ["Yago Iglesias @Yag000"]
 
 
 [workspace]
