--- a/crates/repl/Cargo.toml
+++ b/crates/repl/Cargo.toml
@@ -11,8 +11,9 @@ parser = { path = "../parser" }
 interpreter = { path = "../interpreter" }
 compiler = { path = "../compiler" }
 vm = { path = "../vm" }
+
+# External crates
 clap = "4.3.11"
 clap_derive = "4.3.2"
-anyhow = "1.0.71"
 
 
