--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -10,8 +10,9 @@ edition = "2021"
 lexer = { path = "../lexer" }
 parser = { path = "../parser" }
 interpreter = { path = "../interpreter" }
+object = { path = "../object" }
+
 # External crates
 byteorder = "1.4.3"
 num-derive = "0.4.0"
 num-traits = "0.2.15"
-
