--- a/crates/formatter/Cargo.toml
+++ b/crates/formatter/Cargo.toml
@@ -5,7 +5,20 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "formatter"
+path = "src/lib.rs"
+
+[[bin]]
+name = "formatter"
+path = "src/bin.rs"
+
 [dependencies]
 
 lexer = { path = "../lexer" }
 parser = { path = "../parser" }
+
+
+# External crates
+clap = "4.3.11"
+clap_derive = "4.3.2"
