--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,14 @@ path = "src/lib.rs"
 [dependencies]
 clap = "4.4.16"
 clap_derive = "4.4.7"
-criterion = "0.5.1"
 byteorder = "1.5.0"
 num-derive = "0.4.1"
 num-traits = "0.2.17"
 strum = "0.25.0"
 strum_macros = "0.25.3"
+
+[dev-dependencies]
+criterion = "0.5.1"
 
 
 [[bench]]
