--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ num-derive = "0.4.1"
 num-traits = "0.2.17"
 strum = "0.25.0"
 strum_macros = "0.26.1"
+rustyline = "13.0.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
