ci: Name bench correctly

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -8,8 +8,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-    name: Test
+  becnh:
+    name: Bench
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
