--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,7 +1,6 @@
 name: Bench
 on:
   push:
-    branches: ["master"]
   pull_request:
 
 env:
@@ -11,6 +10,10 @@ jobs:
   becnh:
     name: Bench
     runs-on: ubuntu-latest
+
+    # Avoid running twice the action if it's triggered by a push on a PR from a branch on the repo.
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
