--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,7 +1,6 @@
 name: Rust
 on:
   push:
-    branches: ["master"]
   pull_request:
 
 env:
@@ -11,6 +10,10 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    # Avoid running twice the action if it's triggered by a push on a PR from a branch on the repo.
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -27,6 +30,10 @@ jobs:
   fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
+
+    # Avoid running twice the action if it's triggered by a push on a PR from a branch on the repo.
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -38,6 +45,10 @@ jobs:
   lint:
     name: lint
     runs-on: ubuntu-latest
+
+    # Avoid running twice the action if it's triggered by a push on a PR from a branch on the repo.
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
